src/test/resources/private/typechecking/fail/unknown/fail04_unknownClassAsCtorParam.jova
class Helper {
}

class Test {

    Test(int param0, string param1, Unknown param2, char param3) {
    }
}